fix: Properly style search on mobile

--- a/src/styles/style.sass
+++ b/src/styles/style.sass
@@ -100,9 +100,6 @@ div
                             &.find_in + div
                                 color: var(--MainTextColor)
                             &.find_in
-                                @media screen and (max-aspect-ratio: 13/9)
-                                    @media screen and (max-device-width: 480px)
-                                        border: 0
                                 height: calc(1.5em + 4px)
                                 padding-left: 7px
                                 color: var(--MainTextColor)
